Move docker and treafik templates into their own folder

--- a/roles/discord/templates/docker-compose.yml
+++ b/roles/discord/templates/docker-compose.yml
@@ -1,4 +1,4 @@
-{% import "docker_misc.jinja2" as dm with context -%}
+{% import "docker/misc.jinja2" as dm with context -%}
 
 version: "3"
 services:
