--- a/roles/maintenance/templates/container_management.yml
+++ b/roles/maintenance/templates/container_management.yml
@@ -1,7 +1,7 @@
-{% import 'docker_volumes.jinja2' as dv with context -%}
-{% import 'docker_network.jinja2' as dn with context -%}
-{% import 'docker_misc.jinja2' as dm with context -%}
-{% import 'http_traefik.jinja2' as traefik with context -%}
+{% import 'docker/volumes.jinja2' as dv with context -%}
+{% import 'docker/network.jinja2' as dn with context -%}
+{% import 'docker/misc.jinja2' as dm with context -%}
+{% import 'traefik/http.jinja2' as traefik with context -%}
 
 portainer:
   container_name: portainer
