--- a/roles/maintenance/templates/backup.yml
+++ b/roles/maintenance/templates/backup.yml
@@ -1,9 +1,9 @@
 # docker run -it --rm  -v /home/pi/bkp:/data -v /home/pi:/home/pi -p 8200:8200 duplicati/duplicati
 
-{% import 'docker_volumes.jinja2' as dv with context -%}
-{% import 'docker_network.jinja2' as dn with context -%}
-{% import 'docker_misc.jinja2' as dm with context -%}
-{% import 'http_traefik.jinja2' as traefik with context -%}
+{% import 'docker/volumes.jinja2' as dv with context -%}
+{% import 'docker/network.jinja2' as dn with context -%}
+{% import 'docker/misc.jinja2' as dm with context -%}
+{% import 'traefik/http.jinja2' as traefik with context -%}
 
 {%- set vols = [
   duplicati.volumes.config,
