--- a/roles/personal_website/templates/docker-compose.yml
+++ b/roles/personal_website/templates/docker-compose.yml
@@ -1,6 +1,6 @@
-{% import "docker_network.jinja2" as dn with context -%}
-{% import "docker_misc.jinja2" as dm with context -%}
-{% import "http_traefik.jinja2" as tf with context -%}
+{% import "docker/network.jinja2" as dn with context -%}
+{% import "docker/misc.jinja2" as dm with context -%}
+{% import "traefik/http.jinja2" as tf with context -%}
 
 {% set service_name = "realmar_net" %}
 version: "3"
