--- a/roles/rss/templates/docker-compose.yml
+++ b/roles/rss/templates/docker-compose.yml
@@ -1,8 +1,8 @@
 {% import "password_gen.jinja2" as gen with context -%}
-{% import "docker_volumes.jinja2" as dv with context -%}
-{% import "docker_network.jinja2" as dn with context -%}
-{% import "docker_misc.jinja2" as dm with context -%}
-{% import "http_traefik.jinja2" as traefik with context -%}
+{% import "docker/volumes.jinja2" as dv with context -%}
+{% import "docker/network.jinja2" as dn with context -%}
+{% import "docker/misc.jinja2" as dm with context -%}
+{% import "traefik/http.jinja2" as traefik with context -%}
 
 {% set vols_rss = [
   freshrss.volumes.data,
