Add restart policy to authelia

--- a/roles/proxy/templates/docker-compose.yml
+++ b/roles/proxy/templates/docker-compose.yml
@@ -80,6 +80,7 @@ services:
     networks:
       {{ discovery_network.name }}:
         ipv4_address: {{ sso_auth.ipv4 }}
+    {{ dm.restart_policy() }}
 
 {{ dn.networks_declaration([ discovery_network ]) }}
 
