specify pesistent path in mosquitto

--- a/roles/home_automation/templates/mosquitto.conf
+++ b/roles/home_automation/templates/mosquitto.conf
@@ -2,4 +2,9 @@ allow_anonymous true
 
 persistence true
 persistence_location /mosquitto/data/
+persistence_file mosquitto.db
+
+autosave_interval 600
+
 log_dest file /mosquitto/log/mosquitto.log
+log_timestamp true
