--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,11 +10,14 @@ log_path = ansible.log
 gathering = smart
 scp_if_ssh = True
 
-strategy_plugins = /mnt/c/Users/Realmar/Documents/GitHub/mitogen/ansible_mitogen/plugins/strategy
-strategy = mitogen_linear
+#strategy_plugins = /mnt/c/Users/Realmar/Documents/GitHub/mitogen/ansible_mitogen/plugins/strategy
+#strategy = mitogen_linear
 
 [ssh_connection]
 ssh_args=-o ForwardAgent=yes
+# https://www.toptechskills.com/ansible-tutorials-courses/speed-up-ansible-playbooks-pipelining-mitogen/
+# https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
+pipelining = True
 
 [inventory]
 enable_plugins = ini
