--- a/roles/jupyter/templates/docker-compose.yml
+++ b/roles/jupyter/templates/docker-compose.yml
@@ -34,12 +34,13 @@ services:
           'args': {}
         }
       ])|indent(width = 6) }}
+      {{ dm.disable_auto_update()|indent(width = 4) }}
 
     {{ dv.volumes_section_complete(vols)|indent(width = 4) }}
 {#  {{ dn.map_ports([ (8888,) ])|indent(width = 4) }} #}
     networks:
-      {{ discovery_network.name }}:
-    {{ dm.restart_policy() }}
+      {{ network_names.discovery }}:
+    {{ dm.common()|indent(width = 4) }}
 
 {{ dn.networks_declaration([ discovery_network ]) }}
 
