--- a/roles/maintenance/templates/container_management.yml
+++ b/roles/maintenance/templates/container_management.yml
@@ -15,4 +15,4 @@ portainer:
   {{ dv.volumes_section_complete([ portainer.volumes.data ])|indent(width = 2) }}
     - /var/run/docker.sock:/var/run/docker.sock
   {{ dn.discovery_network_section()|indent(width = 2) }}
-  {{ dm.restart_policy() }}
+  {{ dm.common()|indent(width = 2) }}
