--- a/handlers/services.yml
+++ b/handlers/services.yml
@@ -23,3 +23,8 @@
     name: networking
     state: restarted
   ignore_errors: yes
+
+- name: restart rsyslog
+  service:
+    name: rsyslog
+    state: restarted
