--- a/roles/maintenance/vars/main.yml
+++ b/roles/maintenance/vars/main.yml
@@ -22,6 +22,19 @@ portainer:
       local_folder: "{{ root_dirs.maintenance }}/portainer_config"
       mount: /data
 
+updater:
+  ignore:
+    - "openvpn"
+    - "syslog_interceptor"
+    - "datastore_syslog_interceptor"
+    - "discord_discord_music_bot_1"
+    - "jupyter_jupyter_1"
+    - "realmarnet_realmar.net_1"
+    - "pihole_dhcphelper_1"
+    - "jupyter_jupyter"
+    - "realmarnet_realmar.net"
+    - "pihole_dhcphelper"
+
 maintenance_folders_permissions:
   - folder: "{{ duplicati.volumes.config }}"
     user: "{{ duplicati.user }}"
