--- a/roles/datastore/templates/syslog-interceptor/config.yml
+++ b/roles/datastore/templates/syslog-interceptor/config.yml
@@ -1,4 +1,8 @@
 ---
+  retry_policy:
+    max: 2000
+    initial_delay: 1000
+
   internal:
     log_level: INFO
     log_socket: /dev/log
@@ -13,11 +17,11 @@
         severity: 0
       - regex: alert
         severity: 1
-      - regex: (crit|critical)
+      - regex: (crit|critical|fatal)
         severity: 2
-      - regex: (error|(?-i)err)
+      - regex: (error|(?-i)err|exec\\:\\ postgres\\:\\ not\\ found)
         severity: 3
-      - regex: (warn|warning)
+      - regex: (warn|warning|core\\:warn)
         severity: 4
       - regex: notice
         severity: 5
