--- a/roles/maintenance/templates/backup.yml
+++ b/roles/maintenance/templates/backup.yml
@@ -23,6 +23,7 @@ duplicati:
   {{ traefik.declare_labels_mount_path_internal("backup", "/backup")|indent(width = 2) }}
 {#{{ dn.map_ports([ (8200,) ])|indent(width = 2) }} #}
   {{ dv.volumes_section_complete(vols)|indent(width = 2) }}
+    {{ dv.mount_docker_socket() }}
   {{ dn.discovery_network_section()|indent(width = 2) }}
     {{ network_names.datastore }}:
   {{ dm.common()|indent(width = 2) }}
