--- a/roles/maintenance/vars/main.yml
+++ b/roles/maintenance/vars/main.yml
@@ -35,6 +35,21 @@ updater:
     - "realmarnet_realmar.net"
     - "pihole_dhcphelper"
 
+backup_helper:
+  exclude:
+    - realmarnet
+    - jupyter
+    - freshrss
+    - openvpn
+    - dhcphelper
+    - unbound
+    - netdata
+    - authelia
+    - traefik
+    - syslog_interceptor
+    - discord
+    - duplicati
+
 maintenance_folders_permissions:
   - folder: "{{ duplicati.volumes.config }}"
     user: "{{ duplicati.user }}"
