--- a/roles/maintenance/vars/main.yml
+++ b/roles/maintenance/vars/main.yml
@@ -27,7 +27,8 @@ updater:
     - "openvpn"
     - "syslog_interceptor"
     - "datastore_syslog_interceptor"
-    - "discord_discord_music_bot_1"
+    - "discord_music_bot_1"
+    - "discord_among_us_server_1"
     - "jupyter_jupyter_1"
     - "realmarnet_realmar.net_1"
     - "pihole_dhcphelper_1"
