Do not update docker containers during the day

--- a/roles/maintenance/templates/docker_update.yml
+++ b/roles/maintenance/templates/docker_update.yml
@@ -10,7 +10,8 @@ updater:
     LOG_LEVEL: info
 
     CLEANUP: "true"
-    INTERVAL: 3600
+    # INTERVAL: 3600
+    CRON: "*/10 4-6 * * *"
     SELF_UPDATE: "true"
     LATEST: "false"
 
