--- a/roles/proxy/templates/docker-compose.yml
+++ b/roles/proxy/templates/docker-compose.yml
@@ -32,6 +32,7 @@ services:
 
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.matrix_alt.address=:8443"
       - "--entryPoints.among_us.address=:22023/udp"
 
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
@@ -60,7 +61,7 @@ services:
       - "--certificatesresolvers.{{ traefik.lets_encrypt.resolver_name }}.acme.dnschallenge.delaybeforecheck=0"
 #}
 {% endif %}
-    {{ dn.map_ports([ (80,), (443,), (8080,), (22023,'udp') ])|indent(width = 4) }}
+    {{ dn.map_ports([ (80,), (443,), (8080,), (8443,), (22023,'udp') ])|indent(width = 4) }}
     {{ dv.volumes_section_complete(vols_traefik)|indent(width = 4) }}
       {{ dv.mount_docker_socket() }}
     {{ dm.common()|indent(width = 4) }}
