Use 8448 port for matrix and set log level to warn

--- a/roles/matrix_server/templates/realmar.net.log.config
+++ b/roles/matrix_server/templates/realmar.net.log.config
@@ -16,7 +16,7 @@ loggers:
         level: INFO
 
 root:
-    level: INFO
+    level: WARN
     handlers: [console]
 
 disable_existing_loggers: false
