Create dev and prod inventory

--- a/group_vars/development.yml
+++ b/group_vars/development.yml
@@ -1,5 +1,5 @@
 host:
-  name: pihole-dev
+  name: "{{ inventory_hostname }}"
   public_interface: enp0s8
   ipv4: 192.168.250.102
   ipv6: 2a02:120b:2c06:57d0:ae81:e76b:ea6f:6cff
