--- a/99_debug.yml
+++ b/99_debug.yml
@@ -1,7 +1,11 @@
-- hosts: development
-  gather_facts: no
+- hosts: all
+  gather_facts: yes
   remote_user: root
   debugger: on_failed
+
+  pre_tasks:
+    - include: tasks/collect_system_data.yml
+      tags: always
 
   tasks:
     #- name: Check if is rasbian
@@ -39,5 +43,4 @@
           #- "{{ ansible_distribution_major_version }}"
           #- "{{ ansible_distribution_version }}"
           #- "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name='dingdong')) }}"
-          - "{{ item }}"
-      with_items: "{{ flat_volumes }}"
+          - "{{ is_dev }}"
